<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Address Book</string>
    <string name="no_contacts">No Contacts</string>
    <string name="menu_item_add">Add</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_delete">Delete</string>
    <string name="button_save_contact">Save Contact</string>
    <string name="hint_name">Name (Required)</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_street">Street</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip">Zip</string>
    <string name="label_name">Name:</string>
    <string name="label_email">E-Mail:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_street">Street:</string>
    <string name="label_city">City:</string>
    <string name="label_state">State:</string>
    <string name="label_zip">Zip:</string>
    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the contact</string>
    <string name="ok">OK</string>
    <string name="error_message">You must enter a contact name</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="new_contact">New Contact</string>
    <string name="button_cancel_contact"> Cancel </string>
    <string name="contact_info">Contact Info</string>
    <string name="button_back">Cancel</string>
    <string name="contacts">Contacts</string>

</resources>