<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contact_info"
        android:id="@+id/textView"
        android:layout_row="1"
        android:layout_column="0"
        android:textAlignment="center"
        android:gravity="center|center_horizontal"
        android:background="#c1c9f4"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:gravity="center" >

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="100dp" >

            <ImageView
                android:id="@+id/activity_add_contact_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/default_portrait" />


        </RelativeLayout>


    </LinearLayout>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/details_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="8"
        android:orientation="vertical"
        android:useDefaultMargins="true"
        android:id="@+id/details_gridLayout">

        <TextView
            android:id="@+id/name_label_textView"
            style="@style/ContactLabelTextView"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/label_name" />

        <TextView
            android:id="@+id/name_textView"
            android:layout_column="1"
            android:layout_row="1"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/phone_label_textView"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/label_phone"
            style="@style/ContactLabelTextView" />

        <TextView
            android:id="@+id/phone_textView"
            android:layout_column="1"
            android:layout_row="2"
            style="@style/ContactTextView" />

        <TextView
            android:id="@+id/email_label_textView"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/label_email"
            style="@style/ContactLabelTextView" />

        <TextView
            android:id="@+id/email_textView"
            android:layout_column="1"
            android:layout_row="3"
            style="@style/ContactTextView" />

        <TextView
            android:id="@+id/street_label_textView"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/label_street"
            style="@style/ContactLabelTextView" />

        <TextView
            android:id="@+id/street_textView"
            android:layout_column="1"
            android:layout_row="4"
            style="@style/ContactTextView" />

        <TextView
            android:id="@+id/city_label_textView"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/label_city"
            style="@style/ContactLabelTextView" />

        <TextView
            android:id="@+id/city_textView"
            android:layout_column="1"
            android:layout_row="5"
            style="@style/ContactTextView" />

        <TextView
            android:id="@+id/state_label_textView"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/label_state"
            style="@style/ContactLabelTextView" />

        <TextView
            android:id="@+id/state_textView"
            android:layout_column="1"
            android:layout_row="6"
            style="@style/ContactTextView" />

        <TextView
            android:id="@+id/zip_label_textView"
            android:layout_column="0"
            android:layout_row="7"
            android:text="@string/label_zip"
            style="@style/ContactLabelTextView" />

        <TextView
            android:id="@+id/zip_textView"
            android:layout_column="1"
            android:layout_row="7"
            style="@style/ContactTextView" />


    </GridLayout>


</ScrollView>
</LinearLayout>